--- a/module2/examplesql/pyproject.toml
+++ b/module2/examplesql/pyproject.toml
@@ -1,14 +1,13 @@
 [tool.poetry]
-name = "goit-python-ds"
+name = "examplesql"
 version = "0.1.0"
 description = ""
 authors = ["artur.trotskyi <artur.trotskyi@ukr.net>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.12.8"
 faker = "^35.0.0"
-
 
 [build-system]
 requires = ["poetry-core"]
