--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,8 @@ authors = ["artur.trotskyi <artur.trotskyi@ukr.net>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.12.8"
 faker = "^35.0.0"
-
 
 [build-system]
 requires = ["poetry-core"]
