--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ beautifulsoup4 = "^4.12.3"
 lxml = "^5.3.0"
 sqlalchemy = "^2.0.37"
 requests = "^2.32.3"
+scrapy = "^2.12.0"
 
 [build-system]
 requires = ["poetry-core"]
