--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ sqlalchemy = "^2.0.37"
 requests = "^2.32.3"
 scrapy = "^2.12.0"
 scrapyscript = "^1.1.5"
+selenium = "^4.28.1"
+webdriver-manager = "^4.0.2"
 
 [build-system]
 requires = ["poetry-core"]
